<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- MAIN STRINGS -->
    <string name="app_name" translatable="false">SimpleFrame</string>
    <string name="app_version" translatable="false">2.0.0</string>
    <string name="main_toast_noSDReadRights">Could not access image files. Check permissions</string>
    <string name="no_files_found">No image files were found in the given directory.\nHead over to the settings to change it</string>
    <string name="main_toast_exitmsg">Press back again to leave.</string>
    <string name="main_toast_noFolderPathSet">You have not set a picture source folder yet!</string>
    <string name="touch_or_swipe_down_to_show_action_bar">Touch or swipe down to show the menu</string>
    <!-- MAIN STRINGS END -->

    <!-- SETTINGS STRINGS -->
    <string name="action_settings">Slideshow settings</string>
    <string name="action_android_settings">Android settings</string>
    <string name="action_power">Power</string>
    <string name="title_activity_settings">Settings</string>
    <string name="frame_controls_service_name">SimpleFrame controls</string>
    <string name="frame_controls_service_description">Shows a return button over Android Settings and provides the photo frame power menu.</string>
    <string name="frame_controls_return">Return to SimpleFrame</string>
    <string name="frame_controls_setup_title">Enable frame controls</string>
    <string name="frame_controls_setup_message">Enable “SimpleFrame controls” in Accessibility. This is required for the Power button and for a floating return button over Android Settings.</string>
    <string name="frame_controls_setup_open">Open Accessibility settings</string>
    <string name="frame_controls_unavailable">SimpleFrame controls are unavailable. Check the Accessibility setting and try again.</string>
    <string name="sett_displayTime">Display Time</string>
    <string name="sett_displayTimeSumm">Display time for each picture</string>
    <string name="sett_randomize">Random image</string>
    <string name="sett_randomizeSumm">Whether the pictures should be randomized or in filename order</string>
    <string name="sett_randomizeSummOff">Pictures won\'t be randomized (Filename order)</string>
    <string name="sett_randomizeSummOn">Pictures will be randomized</string>
    <string name="sett_scaling">Picture Scaling</string>
    <string name="sett_scalingSumm">Whether pictures will be scaled to fit the display</string>
    <string name="sett_scalingSummOff">Pictures will be shown in their normal aspect ratio</string>
    <string name="sett_scalingSummOn">Pictures will be scaled to fit the display</string>
    <string name="settings_category_source">Source Settings</string>
    <string name="settings_category_slideshow">Slideshow Settings</string>
    <string name="settings_category_display">Display Settings</string>
    <string name="sett_transition">Transition</string>
    <string name="sett_transitionSumm">Choose the desired transition for the slideshow</string>
    <string name="sett_srcPath_externalSD">Path to pictures</string>
    <string name="sett_choose_picture_folder">Choose picture folder</string>
    <string name="sett_picture_folder_summary">All supported photos in this folder and its subfolders are included</string>
    <string name="sett_dialog_title">Select directory</string>
    <string name="sett_dialog_posBtn" tools:ignore="ButtonCase">OK</string>
    <string name="sett_dialog_negBtn">Cancel</string>
    <string name="sett_yes">Yes</string>
    <string name="sett_no">No</string>
    <string name="sett_key_scaling" translatable="false">Scaling</string>
    <string name="sett_key_randomize" translatable="false">Randomize</string>
    <string name="sett_key_displaytime" translatable="false">DisplayTime</string>
    <string name="sett_key_transition" translatable="false">Transition</string>
    <string name="sett_key_srcpath_sd" translatable="false">SrcPath_sd</string>
    <string name="sett_key_firstStart" translatable="false">FirstStart</string>
    <string name="sett_key_currentPage" translatable="false">currentpage</string>
    <string name="sett_key_direction" translatable="false">toogledirection</string>
    <string name="sett_key_brightness_mode" translatable="false">BrightnessMode</string>
    <string name="sett_key_brightness_percent" translatable="false">BrightnessPercent</string>
    <string name="sett_key_night_mode" translatable="false">NightMode</string>
    <string name="sett_key_night_start" translatable="false">NightStartMinutes</string>
    <string name="sett_key_night_end" translatable="false">NightEndMinutes</string>
    <string name="sett_key_saved_screen_timeout" translatable="false">SavedScreenOffTimeout</string>
    <string name="sett_brightness_mode">Brightness control</string>
    <string name="sett_brightness_percent">Manual brightness</string>
    <string name="sett_night_mode">Night schedule</string>
    <string name="sett_night_mode_summary">Turn the display off and wake it on a daily schedule</string>
    <string name="sett_night_start">Screen off time</string>
    <string name="sett_night_end">Screen on time</string>
    <string name="sett_brightness_value">%1$d%%</string>
    <string name="sett_brightness_dialog_title">Brightness: %1$d%%</string>
    <string name="sett_system_settings_permission_title">Allow display control?</string>
    <string name="sett_system_settings_permission_message">SimpleFrame can always dim its own window. Allow Modify system settings to switch automatic brightness and fully turn the screen off at night.</string>
    <string name="sett_system_settings_permission_allow">Allow</string>
    <string name="sett_system_settings_permission_later">Later</string>
    <string name="sett_auto_brightness_no_sensor">Automatic selected, but this device does not report an ambient light sensor</string>
    <string name="loading_slideshow">Loading slideshow…</string>
    <string name="permissions_explanation">Permissions must be granted to access the image files.</string>
    <string name="permissions_denied">Permissions were denied. Head to the system settings to grant them again.</string>
    <string name="continue_">Grant</string>
    <!-- SETTINGS STRINGS END -->
</resources>
