<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff2a2a2a"
    android:clipChildren="false"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:importantForAccessibility="no"
                    app:srcCompat="@drawable/ic_swipe_down" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:importantForAccessibility="no"
                    app:srcCompat="@drawable/ic_touch" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxWidth="300dp"
                android:text="@string/touch_or_swipe_down_to_show_action_bar"
                android:textSize="20sp" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="10" />

    </LinearLayout>

    <TextView
        android:id="@+id/no_files_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/no_files_found"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/loading_slideshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/loading_slideshow"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/permissions_denied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/permissions_denied"
        android:textSize="20sp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/permissions_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/permissions_explanation"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/grant_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_" />
    </LinearLayout>

    <com.louissimonmcnicoll.simpleframe.custom_views.CustomViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>
